Correction of padding in the section with id=hero to better align the content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,7 @@ h6 {
   background-size: cover;
 }
 
-#hero:before {
+#hero::before {
   content: "";
   background: rgba(5, 13, 24, 0.3);
   position: absolute;
@@ -258,6 +258,7 @@ h6 {
   left: 0;
   right: 0;
   z-index: 1;
+
 }
 
 #hero .hero-container {
